force-app/main/default/objects/Matter__c/fields/Attorney_assigned__c.field-meta.xml
<CustomField>
    <fullName>Attorney_assigned__c</fullName>
    <label>Attorney assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>