force-app/main/default/objects/Matter__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <description>This populates the Client reference field inside the matter in Clio. This can be any information that your firm need, such as court file number or office file number, unless your firm engages in LEDES billing.</description>
    <label>Client Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>