force-app/main/default/objects/Matter__c/fields/Date_FA_was_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_FA_was_sent__c</fullName>
    <label>Date FA was sent</label>
    <type>Date</type>
</CustomField>