force-app/main/default/objects/Matter__c/fields/Date_FA_was_signed__c.field-meta.xml
<CustomField>
    <fullName>Date_FA_was_signed__c</fullName>
    <label>Date FA was signed</label>
    <type>Date</type>
</CustomField>