force-app/main/default/objects/Matter__c/fields/Date_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Payment__c</fullName>
    <description>Set by Payment - After Flow when first Payment record is created</description>
    <inlineHelpText>Date that the client made their first payment. Set Automatically by the system</inlineHelpText>
    <label>Date of First Payment</label>
    <type>Date</type>
</CustomField>