force-app/main/default/objects/Matter__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Your specific case information. This information is required.</description>
    <label>Description</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>