force-app/main/default/objects/Matter__c/fields/FA_Signed2__c.field-meta.xml
<CustomField>
    <fullName>FA_Signed2__c</fullName>
    <formula>IF(
  ISBLANK(Date_FA_was_signed__c), 
  &quot;🔴 No&quot;,
  &quot;🟢 Yes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Signed?</label>
    <type>Text</type>
</CustomField>