force-app/main/default/objects/Matter__c/fields/First_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Made__c</fullName>
    <formula>IF(
  ISBLANK(Date_FA_was_signed__c), 
  &quot;No&quot;,
  &quot;Yes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Payment Made</label>
    <type>Text</type>
</CustomField>