force-app/main/default/objects/Matter__c/fields/Flat_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Amount__c</fullName>
    <label>Flat Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>