force-app/main/default/objects/Matter__c/fields/Flat_Rate_Retainer_if_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Retainer_if_Flat_Rate__c</fullName>
    <formula>Lead__r.Flat_Rate_Retainer_if_Flat_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from associated Lead</inlineHelpText>
    <label>Flat Rate Retainer $ (if Flat Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>