force-app/main/default/objects/Matter__c/fields/Initial_Retained_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Initial_Retained_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Retainer Refunded</label>
    <type>Checkbox</type>
</CustomField>