force-app/main/default/objects/Matter__c/fields/Initial_Retainer_Evergreen_Hr_Rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Retainer_Evergreen_Hr_Rate__c</fullName>
    <formula>Lead__r.Initial_Retainer_Evergreen_Hr_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from associated Lead</inlineHelpText>
    <label>Initial Retainer $ (Evergreen Hr Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>