force-app/main/default/objects/Matter__c/fields/Intake_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Intake_Attorney__c</fullName>
    <formula>Lead__r.Intake_Attorney__r.FirstName + &quot; &quot; +  Lead__r.Intake_Attorney__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The intake attorney (if one was involved). Pulled from the associated Lead</inlineHelpText>
    <label>Intake Attorney</label>
    <type>Text</type>
</CustomField>