force-app/main/default/objects/Matter__c/fields/Intake_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Intake_Specialist__c</fullName>
    <formula>Lead__r.Owner:User.FirstName + &quot; &quot; + Lead__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The intake specialist who input the lead (pulled from the associated Lead)</inlineHelpText>
    <label>Intake Specialist</label>
    <type>Text</type>
</CustomField>