force-app/main/default/objects/Matter__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>This is the location of the matter. This populates the Location field inside the matter in Clio.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>