force-app/main/default/objects/Matter__c/fields/Matter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Matter_Notes__c</fullName>
    <label>Matter Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>