force-app/main/default/objects/Matter__c/fields/Matter_Number__c.field-meta.xml
<CustomField>
    <fullName>Matter_Number__c</fullName>
    <description>This is the matter number that will display if the account is set to a manual numbering system, otherwise this can be left blank and matters will use Clio’s automated matter numbering.</description>
    <label>Matter Number</label>
    <type>AutoNumber</type>
</CustomField>