force-app/main/default/objects/Matter__c/fields/Matter_Rate__c.field-meta.xml
<CustomField>
    <fullName>Matter_Rate__c</fullName>
    <label>Matter Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>