force-app/main/default/objects/Matter__c/fields/Nature_of_Matter__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Matter__c</fullName>
    <formula>TEXT(Lead__r.Nature_of_Matter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nature of matter (pulled from associated Lead)</inlineHelpText>
    <label>Nature of Matter</label>
    <type>Text</type>
</CustomField>