force-app/main/default/objects/Matter__c/fields/Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Date__c</fullName>
    <label>Pending Date</label>
    <type>Date</type>
</CustomField>