force-app/main/default/objects/Matter__c/fields/Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area__c</fullName>
    <label>Practice Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Admiralty/Maritime</fullName>
            </value>
            <value>
                <fullName>Anti-Trust / Competition</fullName>
            </value>
            <value>
                <fullName>Appellate</fullName>
            </value>
            <value>
                <fullName>Banking / Finance</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business Formation / Compliance</fullName>
            </value>
            <value>
                <fullName>Civil Litigation</fullName>
            </value>
            <value>
                <fullName>Civil Rights / Constitutional</fullName>
            </value>
            <value>
                <fullName>Collections &amp; Debt</fullName>
            </value>
            <value>
                <fullName>Commercial / Sale of Goods</fullName>
            </value>
            <value>
                <fullName>Commercial Litigation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consumer Protection</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Corporate Litigation</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Disability / Social Security</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Elder</fullName>
            </value>
            <value>
                <fullName>Employment / Labor</fullName>
            </value>
            <value>
                <fullName>Energy / Environmental</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Food / Drug</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>In-House Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>