force-app/main/default/objects/Matter__c/fields/Responsible_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Must be an exact match to the name of an attorney user on the bank account in Clio.</description>
    <label>Responsible Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>