force-app/main/default/objects/Matter__c/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <label>Retainer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>