force-app/main/default/objects/Matter__c/fields/Supervising_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Supervising_Attorney__c</fullName>
    <label>Supervising Attorney</label>
    <length>255</length>
    <type>Text</type>
</CustomField>