force-app/main/default/objects/Matter__c/fields/Total_Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Retainer_Amount__c</fullName>
    <formula>IF(
				Lead__r.Initial_Retainer_Evergreen_Hr_Rate__c &gt; 0  ||  Lead__r.Flat_Rate_Retainer_if_Flat_Rate__c &gt; 0,
				Lead__r.Initial_Retainer_Evergreen_Hr_Rate__c + Lead__r.Flat_Rate_Retainer_if_Flat_Rate__c,
				0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Retainer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>