force-app/main/default/objects/Matter__c/fields/Trust_Balance__c.field-meta.xml
<CustomField>
    <fullName>Trust_Balance__c</fullName>
    <label>Trust Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>