force-app/main/default/objects/Matter__c/fields/Uncleared_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Uncleared_Deposits__c</fullName>
    <label>Uncleared Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>