force-app/main/default/objects/Matter__c/fields/Uncleared_Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>Uncleared_Withdrawals__c</fullName>
    <label>Uncleared Withdrawals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>