force-app/main/default/objects/Matter__c/fields/Work_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Work_In_Progress__c</fullName>
    <label>Work In Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>