force-app/main/default/objects/Matter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank_Balance__c</columns>
    <columns>Book_Balance__c</columns>
    <columns>Uncleared_Deposits__c</columns>
    <columns>Uncleared_Withdrawals__c</columns>
    <columns>Status__c</columns>
    <columns>Practice_Area__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>