force-app/main/default/objects/Matter__c/listViews/Practice_Area_Business.listView-meta.xml
<ListView>
    <fullName>Practice_Area_Business</fullName>
    <columns>NAME</columns>
    <columns>Bank_Balance__c</columns>
    <columns>Book_Balance__c</columns>
    <columns>Uncleared_Deposits__c</columns>
    <columns>Uncleared_Withdrawals__c</columns>
    <columns>Status__c</columns>
    <columns>Practice_Area__c</columns>
    <columns>External_Id__c</columns>
    <columns>Open_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Practice_Area__c</field>
        <operation>equals</operation>
        <value>Civil Litigation</value>
    </filters>
    <label>Practice Area - Civil Litigation</label>
</ListView>